Fix problem of white gap.

--- a/styles/sign_up.css
+++ b/styles/sign_up.css
@@ -4,7 +4,7 @@ section {
 }
 
 #dist {
-	height: 17.1vh;
+	height: 20vh;
 	width: 100%;
 }
 
@@ -139,7 +139,9 @@ section {
 	border: 0;
 	background-color: #400E08;
 	color: #FFF;
-	height: 2vh;
+	height: 5vh;
+	width: 50vw;
+	margin: 3vh 0;
 }
 
 footer {
